--- a/ulearn/theme/stylesheets/ulearn.css
+++ b/ulearn/theme/stylesheets/ulearn.css
@@ -144,7 +144,7 @@ li [class*=" fa-icon-"].fa-icon-large, .nav li [class^="fa-icon-"].fa-icon-large
 /* line 131, ../../../../genweb.theme/genweb/theme/bootstrap/scss/compass_twitter_bootstrap/_font-awesome.scss */
 ul.icons {
   list-style-type: none;
-  text-indent: -.75em;
+  text-indent: -0.75em;
 }
 /* line 137, ../../../../genweb.theme/genweb/theme/bootstrap/scss/compass_twitter_bootstrap/_font-awesome.scss */
 ul.icons li [class^="fa-icon-"],
@@ -160,7 +160,7 @@ ul.icons li [class*=" fa-icon-"] {
 /* line 150, ../../../../genweb.theme/genweb/theme/bootstrap/scss/compass_twitter_bootstrap/_font-awesome.scss */
 .fa-icon-border {
   border: solid 1px #eeeeee;
-  padding: 0.2em 0.25em 0.15em;
+  padding: .2em .25em .15em;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   border-radius: 3px;
@@ -1688,9 +1688,9 @@ div.token-input-dropdown-facebook {
   width: 400px;
   background-color: #fff;
   overflow: hidden;
-  border-left: 1px solid #cccccc;
-  border-right: 1px solid #cccccc;
-  border-bottom: 1px solid #cccccc;
+  border-left: 1px solid #ccc;
+  border-right: 1px solid #ccc;
+  border-bottom: 1px solid #ccc;
   cursor: default;
   font-size: 13px;
   font-family: Verdana;
@@ -1745,14 +1745,14 @@ div.token-input-dropdown-facebook ul li.token-input-selected-dropdown-item-faceb
 #maxui-container {
   color: #444444;
   font: 13px/18px "Open Sans", serif;
-  text-shadow: 0 1px white;
+  text-shadow: 0 1px #FFFFFF;
   border: 0 none;
 }
 
 /* line 11, ../scss/_maxui.scss */
 #maxui-container a {
   color: #007BC0;
-  font-family: "Open Sans", serif;
+  font-family: 'Open Sans', serif;
 }
 
 /* line 15, ../scss/_maxui.scss */
@@ -1775,7 +1775,7 @@ div.token-input-dropdown-facebook ul li.token-input-selected-dropdown-item-faceb
 
 /* line 25, ../scss/_maxui.scss */
 #maxui-timeline {
-  background: none repeat scroll 0 0 white;
+  background: none repeat scroll 0 0 #FFFFFF;
   clear: both;
   margin: 0;
   overflow: hidden;
@@ -1784,7 +1784,7 @@ div.token-input-dropdown-facebook ul li.token-input-selected-dropdown-item-faceb
 
 /* line 32, ../scss/_maxui.scss */
 #maxui-newactivity {
-  background: none repeat scroll 0 0 #34495e;
+  background: none repeat scroll 0 0 #34495E;
   padding: 10px;
   position: relative;
 }
@@ -1795,7 +1795,7 @@ div.token-input-dropdown-facebook ul li.token-input-selected-dropdown-item-faceb
   border-radius: 3px 3px 3px 3px;
   box-shadow: 0;
   color: #444444;
-  font-family: "Open Sans", serif;
+  font-family: 'Open Sans', serif;
   font-size: 13px;
   height: 48px;
   line-height: 18px;
@@ -1809,7 +1809,7 @@ div.token-input-dropdown-facebook ul li.token-input-selected-dropdown-item-faceb
 
 /* line 53, ../scss/_maxui.scss */
 #maxui-search {
-  background: none repeat scroll 0 0 #deded6;
+  background: none repeat scroll 0 0 #DEDED6;
   border-bottom: 0 none;
   border-top: 0 none;
   padding: 10px 30px 10px 10px;
@@ -1818,9 +1818,9 @@ div.token-input-dropdown-facebook ul li.token-input-selected-dropdown-item-faceb
 /* line 59, ../scss/_maxui.scss */
 #maxui-search-text {
   -moz-appearance: none;
-  border: 1px solid #b2b2b2;
+  border: 1px solid #B2B2B2;
   color: #666666;
-  font-family: "Open Sans", serif;
+  font-family: 'Open Sans', serif;
   font-size: 13px;
   height: 24px;
   line-height: 20px;
@@ -1871,7 +1871,7 @@ div.token-input-dropdown-facebook ul li.token-input-selected-dropdown-item-faceb
 
 /* line 101, ../scss/_maxui.scss */
 #maxui-back-conversations, #maxui-show-conversations {
-  background: none repeat scroll 0 0 whitesmoke;
+  background: none repeat scroll 0 0 #F5F5F5;
   border-bottom: 0 none;
   height: 18px;
   padding-bottom: 3px;
@@ -1885,7 +1885,7 @@ div.token-input-dropdown-facebook ul li.token-input-selected-dropdown-item-faceb
 
 /* line 111, ../scss/_maxui.scss */
 input.maxui-button {
-  background: none repeat scroll 0 0 #f58d3d;
+  background: none repeat scroll 0 0 #F58D3D;
   border: 0 none;
   border-radius: 4px 4px 4px 4px;
   color: #FFFFFF;
@@ -1908,13 +1908,13 @@ input.maxui-button:hover, input.maxui-button:hover, input.maxui-button:focus, in
 
 /* line 130, ../scss/_maxui.scss */
 input.maxui-button[disabled] {
-  background: none repeat scroll 0 0 #e5e5e5;
+  background: none repeat scroll 0 0 #E5E5E5;
   border: 0;
   border-radius: 4px 4px 4px 4px;
   box-shadow: none;
   color: #666666;
   cursor: default;
-  text-shadow: 0 1px white;
+  text-shadow: 0 1px #FFFFFF;
 }
 
 /* line 139, ../scss/_maxui.scss */
@@ -1924,7 +1924,7 @@ input.maxui-button[disabled] {
 
 /* line 142, ../scss/_maxui.scss */
 #maxui-container textarea:focus, #maxui-container input[type="search"]:focus {
-  border: 1px solid #f58d3d !important;
+  border: 1px solid #F58D3D !important;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05) inset, 0 0 8px rgba(100, 123, 192, 0.5) !important;
 }
 
@@ -1955,14 +1955,14 @@ h1, h2, h3, label {
 
 /* line 36, ../scss/_overrides.scss */
 .liniaDalt, .tileHeadline {
-  border-top: 1px solid #dddddd;
+  border-top: 1px solid #DDDDDD;
   box-shadow: none;
   padding: 10px 0;
 }
 
 /* line 41, ../scss/_overrides.scss */
 .liniaBaix, .documentFirstHeading {
-  border-bottom: 1px solid #dddddd;
+  border-bottom: 1px solid #DDDDDD;
   box-shadow: none;
   margin: 0 0 15px;
   padding: 0 0 5px;
@@ -2162,12 +2162,12 @@ li > a#plone-contentmenu-workflow {
 /* line 26, ../scss/ulearn.scss */
 body {
   background: #eae9e4;
-  font-family: "Open Sans", sans-serif;
+  font-family: 'Open Sans', sans-serif;
 }
 
 /* line 31, ../scss/ulearn.scss */
 input, button, select, textarea {
-  font-family: "Open Sans", sans-serif;
+  font-family: 'Open Sans', sans-serif;
 }
 
 /* line 35, ../scss/ulearn.scss */
@@ -2307,7 +2307,7 @@ input[type="text"]:focus {
 
 /* line 137, ../scss/ulearn.scss */
 .novetat {
-  background: none repeat scroll 0 0 #34495e;
+  background: none repeat scroll 0 0 #34495E;
 }
 
 /* line 140, ../scss/ulearn.scss */
@@ -2329,7 +2329,7 @@ input[type="text"]:focus {
 
 /* line 152, ../scss/ulearn.scss */
 .nav-pills > li > a {
-  background: none repeat scroll 0 0 #deded6;
+  background: none repeat scroll 0 0 #DEDED6;
   color: #34495E;
   text-decoration: none;
   text-shadow: 1px 1px 0px white;
@@ -2345,7 +2345,7 @@ input[type="text"]:focus {
 /* line 163, ../scss/ulearn.scss */
 .num {
   background: none repeat scroll 0 0 #f58d3d;
-  border-left: 1px solid #eeeeee;
+  border-left: 1px solid #eee;
   border-radius: 0 5px 5px 0;
   color: white;
   float: right;
@@ -2355,7 +2355,7 @@ input[type="text"]:focus {
   margin-top: -8px;
   padding: 7px 5px 5px;
   text-align: center;
-  text-shadow: 1px 1px 0 #92480f;
+  text-shadow: 1px 1px 0 #92480F;
   width: 33px;
 }
 
@@ -2381,7 +2381,7 @@ input[type="text"]:focus {
   padding-bottom: 7px;
   padding-right: 4px;
   width: 60px;
-  transition: all 0.1s ease 0s;
+  transition: all 0.10s ease 0s;
 }
 
 /* line 191, ../scss/ulearn.scss */
@@ -2397,7 +2397,7 @@ input[type="text"]:focus {
 
 /* line 199, ../scss/ulearn.scss */
 #menusup {
-  height: 47px;
+  height: 49px;
 }
 /* line 202, ../scss/ulearn.scss */
 #menusup nav {
@@ -2495,7 +2495,7 @@ input[type="text"]:focus {
   padding-bottom: 18px;
   padding-top: 24px;
   text-align: center;
-  text-shadow: 1px 1px 0 #92480f;
+  text-shadow: 1px 1px 0 #92480F;
   margin-bottom: 0;
 }
 
@@ -2526,7 +2526,7 @@ input[type="text"]:focus {
 
 /* line 308, ../scss/ulearn.scss */
 #calendari {
-  background: none repeat scroll 0 0 whitesmoke;
+  background: none repeat scroll 0 0 #F5F5F5;
   margin-top: 10px;
   padding: 5px 5px 10px;
   text-shadow: 1px 1px 0 white;
@@ -2534,7 +2534,7 @@ input[type="text"]:focus {
 
 /* line 314, ../scss/ulearn.scss */
 #box_agenda .hiddenStructure {
-  background: none repeat scroll 0 0 #eae9e4;
+  background: none repeat scroll 0 0 #EAE9E4;
   color: black;
   margin-bottom: 5px;
   padding: 1px;
@@ -2594,7 +2594,7 @@ input[type="text"]:focus {
 
 /* line 332, ../scss/ulearn.scss */
 #box_valorats li, #box_comentaris li {
-  border-bottom: 1px solid #eeeeee;
+  border-bottom: 1px solid #EEEEEE;
   font-size: 13px;
   line-height: 15px;
   margin-bottom: 8px;
@@ -2644,7 +2644,7 @@ input[type="text"]:focus {
 
 /* line 376, ../scss/ulearn.scss */
 #menusup .nav-tabs > .btn-plus > a {
-  background: none repeat scroll 0 0 #34495e;
+  background: none repeat scroll 0 0 #34495E;
   color: white;
   padding-left: 10px;
   padding-right: 5px;
@@ -2653,7 +2653,7 @@ input[type="text"]:focus {
 
 /* line 383, ../scss/ulearn.scss */
 #menusup .nav-tabs > .btn-plus > a:hover {
-  background: none repeat scroll 0 0 #34495e;
+  background: none repeat scroll 0 0 #34495E;
   opacity: 0.8;
 }
 
@@ -2682,7 +2682,7 @@ input[type="text"]:focus {
 #communitylist li {
   min-height: 55px;
   line-height: 20px;
-  border-bottom: 1px solid #dddddd;
+  border-bottom: 1px solid #DDDDDD;
   margin-bottom: 0;
   padding-bottom: 15px;
   padding-left: 10px;
@@ -2716,7 +2716,7 @@ input[type="text"]:focus {
 /* line 440, ../scss/ulearn.scss */
 #communitylist img:hover {
   transition: all 0.25s ease 0s;
-  border: 2px solid #f58d3d;
+  border: 2px solid #F58D3D;
 }
 /* line 443, ../scss/ulearn.scss */
 #communitylist .item {
@@ -2764,7 +2764,7 @@ input[type="text"]:focus {
   font-weight: bold;
   height: 18px;
   text-align: center;
-  text-shadow: 1px 1px 0 #92480f;
+  text-shadow: 1px 1px 0 #92480F;
   width: 33px;
 }
 /* line 472, ../scss/ulearn.scss */
