--- a/ulearn/theme/scss/ulearn.scss
+++ b/ulearn/theme/scss/ulearn.scss
@@ -31,11 +31,12 @@ body {
 input, button, select, textarea {
   font-family: 'Open Sans', sans-serif;
 }
+#portal-personaltools-wrapper { margin-top: 36px !important; }
 
 #portal-header {
   border-top: none;
   border-bottom: none;
-  background:#eae9e4!important;
+  background:#f58d3d !important;
 }
 
 .ulearnbox h2 {
@@ -67,10 +68,10 @@ a:hover, a:active {
 }
 
 .masthead {
-  background-color: #f58d3d;
+  // background-color: #f58d3d;
   margin-bottom: 0;
   padding: 15px 20px;
-  box-shadow:0 1px 3px rgba(0, 0, 0, 0.1) inset, 0 0 0 #DDDDDD;
+  // box-shadow:0 1px 3px rgba(0, 0, 0, 0.1) inset, 0 0 0 #DDDDDD;
 }
 
 .dropdown-menu a {
@@ -82,7 +83,7 @@ a:hover, a:active {
 //   }
 
 #peu {
-  background: none;
+  background-color: #f58d3d;
   border-top: none;
   a {
     color: white;
@@ -96,7 +97,7 @@ a:hover, a:active {
   font-size:13px;
   color:white;
   margin-top:20px;
-  box-shadow:0 1px 3px rgba(0, 0, 0, 0.1) inset, 0 0 0 #DDDDDD;
+  // box-shadow:0 1px 3px rgba(0, 0, 0, 0.1) inset, 0 0 0 #DDDDDD;
 }
 
 #peu .inner { padding: 20px;}
@@ -190,12 +191,6 @@ border-color: #34495E;
 }
 #miniatures img:hover {opacity:0.8;}
 
-// Menu de communities i subseccions
-.menuwrapper {
-  background-color: #eae9e4;
-  height: 47px;
-}
-
 #menusup {
     height: 49px;
 
@@ -282,19 +277,23 @@ text-shadow:none;
 #menusup .icons {font-size:20px;}
 
 #day {
-    background: none repeat scroll 0 0 #f58d3d;
-    border-radius: 4px 4px 4px 4px;
-    color: white;
-    font-size: 36px;
-    font-weight: bold;
-    padding-bottom: 18px;
-    padding-top: 24px;
-    text-align: center;
-    text-shadow: 1px 1px 0 #92480F;
-	margin-bottom:0;
+  background: none repeat scroll 0 0 #f58d3d;
+  // border-radius: 4px 4px 4px 4px;
+  color: white;
+  font-size: 36px;
+  font-weight: bold;
+  padding-bottom: 7px;
+  padding-top: 13px;
+  text-align: center;
+  text-shadow: 1px 1px 0 #92480F;
+  margin-bottom:0;
+
+  .arrow { border-left-color: #f58d3d; }
 }
 #day p {margin:0;}
 .data {font-size:13px;padding-top:6px;}
+
+
 #agenda {
   background:#f5f5f5;
   font-size:12px;
@@ -341,7 +340,6 @@ text-shadow:none;
  font-size:15px;
  vertical-align: middle;
 }
-
 
 .btn-comunitat {
   color: #FFFFFF;
