--- a/ulearn/theme/stylesheets/ulearn.css
+++ b/ulearn/theme/stylesheets/ulearn.css
@@ -2170,14 +2170,19 @@ input, button, select, textarea {
   font-family: 'Open Sans', sans-serif;
 }
 
-/* line 35, ../scss/ulearn.scss */
+/* line 34, ../scss/ulearn.scss */
+#portal-personaltools-wrapper {
+  margin-top: 36px !important;
+}
+
+/* line 36, ../scss/ulearn.scss */
 #portal-header {
   border-top: none;
   border-bottom: none;
-  background: #eae9e4!important;
+  background: #f58d3d !important;
 }
 
-/* line 41, ../scss/ulearn.scss */
+/* line 42, ../scss/ulearn.scss */
 .ulearnbox h2 {
   color: #f58d3d;
   font-size: 20px;
@@ -2187,7 +2192,7 @@ input, button, select, textarea {
   padding: 0;
 }
 
-/* line 49, ../scss/ulearn.scss */
+/* line 50, ../scss/ulearn.scss */
 a {
   color: #007BC0;
   -webkit-transition: 0.25s;
@@ -2197,74 +2202,71 @@ a {
   -webkit-backface-visibility: hidden;
 }
 
-/* line 58, ../scss/ulearn.scss */
+/* line 59, ../scss/ulearn.scss */
 a:hover {
   color: #004A74;
   text-decoration: none;
 }
 
-/* line 61, ../scss/ulearn.scss */
+/* line 62, ../scss/ulearn.scss */
 a:hover, a:focus {
   color: #004A74;
   text-decoration: underline;
 }
 
-/* line 65, ../scss/ulearn.scss */
+/* line 66, ../scss/ulearn.scss */
 a:hover, a:active {
   outline: 0 none;
 }
 
-/* line 69, ../scss/ulearn.scss */
+/* line 70, ../scss/ulearn.scss */
 .masthead {
-  background-color: #f58d3d;
   margin-bottom: 0;
   padding: 15px 20px;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1) inset, 0 0 0 #dddddd;
 }
 
-/* line 76, ../scss/ulearn.scss */
+/* line 77, ../scss/ulearn.scss */
 .dropdown-menu a {
   text-decoration: none;
 }
 
-/* line 84, ../scss/ulearn.scss */
+/* line 85, ../scss/ulearn.scss */
 #peu {
-  background: none;
+  background-color: #f58d3d;
   border-top: none;
 }
-/* line 87, ../scss/ulearn.scss */
+/* line 88, ../scss/ulearn.scss */
 #peu a {
   color: white;
 }
 
-/* line 92, ../scss/ulearn.scss */
+/* line 93, ../scss/ulearn.scss */
 #peu .container {
   border-top: none;
   background-color: #f58d3d;
   font-size: 13px;
   color: white;
   margin-top: 20px;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1) inset, 0 0 0 #dddddd;
 }
 
-/* line 102, ../scss/ulearn.scss */
+/* line 103, ../scss/ulearn.scss */
 #peu .inner {
   padding: 20px;
 }
 
-/* line 104, ../scss/ulearn.scss */
+/* line 105, ../scss/ulearn.scss */
 input[type="text"] {
   border-color: #E76E10;
   margin-right: 5px;
   padding: 4px 0 4px 10px;
 }
 
-/* line 109, ../scss/ulearn.scss */
+/* line 110, ../scss/ulearn.scss */
 input[type="text"]:focus {
   border-color: #34495E;
 }
 
-/* line 113, ../scss/ulearn.scss */
+/* line 114, ../scss/ulearn.scss */
 .ulearnbox {
   background: url("/++ulearn++static/images/pix_cantonada.png") no-repeat right top white;
   padding: 5px 10px 10px;
@@ -2273,17 +2275,17 @@ input[type="text"]:focus {
   box-shadow: -1px 1px 2px #dddddd;
 }
 
-/* line 120, ../scss/ulearn.scss */
+/* line 121, ../scss/ulearn.scss */
 .ulearnbox a {
   text-decoration: none;
 }
 
-/* line 121, ../scss/ulearn.scss */
+/* line 122, ../scss/ulearn.scss */
 #badges {
   background: white;
 }
 
-/* line 124, ../scss/ulearn.scss */
+/* line 125, ../scss/ulearn.scss */
 .box_badges {
   background: none repeat scroll 0 0 #f58d3d;
   color: white;
@@ -2297,7 +2299,7 @@ input[type="text"]:focus {
   width: 100%;
 }
 
-/* line 136, ../scss/ulearn.scss */
+/* line 137, ../scss/ulearn.scss */
 .box_badges:hover {
   opacity: 0.8;
   cursor: pointer;
@@ -2305,29 +2307,29 @@ input[type="text"]:focus {
   transition: all 0.25s ease 0s;
 }
 
-/* line 137, ../scss/ulearn.scss */
+/* line 138, ../scss/ulearn.scss */
 .novetat {
   background: none repeat scroll 0 0 #34495E;
 }
 
-/* line 140, ../scss/ulearn.scss */
+/* line 141, ../scss/ulearn.scss */
 #user {
   color: #666666;
   font-size: 0.8em;
   margin-bottom: 5px;
 }
 
-/* line 145, ../scss/ulearn.scss */
+/* line 146, ../scss/ulearn.scss */
 #user p {
   margin-bottom: 0;
 }
 
-/* line 149, ../scss/ulearn.scss */
+/* line 150, ../scss/ulearn.scss */
 .nav-pills > .active > a, .nav-pills > .active > a:hover, .nav-pills > .active > a:focus {
   background-color: #DEDED6;
 }
 
-/* line 152, ../scss/ulearn.scss */
+/* line 153, ../scss/ulearn.scss */
 .nav-pills > li > a {
   background: none repeat scroll 0 0 #DEDED6;
   color: #34495E;
@@ -2336,13 +2338,13 @@ input[type="text"]:focus {
   outline: none;
 }
 
-/* line 159, ../scss/ulearn.scss */
+/* line 160, ../scss/ulearn.scss */
 #box_comunitats .nav {
   margin-bottom: 10px;
   margin-top: 10px;
 }
 
-/* line 163, ../scss/ulearn.scss */
+/* line 164, ../scss/ulearn.scss */
 .num {
   background: none repeat scroll 0 0 #f58d3d;
   border-left: 1px solid #eee;
@@ -2359,22 +2361,22 @@ input[type="text"]:focus {
   width: 33px;
 }
 
-/* line 178, ../scss/ulearn.scss */
+/* line 179, ../scss/ulearn.scss */
 .num:hover {
   opacity: 0.8;
 }
 
-/* line 179, ../scss/ulearn.scss */
+/* line 180, ../scss/ulearn.scss */
 .icons {
   margin-right: 4px;
 }
 
-/* line 180, ../scss/ulearn.scss */
+/* line 181, ../scss/ulearn.scss */
 #miniatures {
   margin-top: 10px;
 }
 
-/* line 183, ../scss/ulearn.scss */
+/* line 184, ../scss/ulearn.scss */
 #miniatures img {
   height: 60px;
   overflow: hidden;
@@ -2384,39 +2386,33 @@ input[type="text"]:focus {
   transition: all 0.10s ease 0s;
 }
 
-/* line 191, ../scss/ulearn.scss */
+/* line 192, ../scss/ulearn.scss */
 #miniatures img:hover {
   opacity: 0.8;
 }
 
 /* line 194, ../scss/ulearn.scss */
-.menuwrapper {
-  background-color: #eae9e4;
-  height: 47px;
-}
-
-/* line 199, ../scss/ulearn.scss */
 #menusup {
   height: 49px;
 }
-/* line 202, ../scss/ulearn.scss */
+/* line 197, ../scss/ulearn.scss */
 #menusup nav {
   border-bottom: 0;
   margin-bottom: 0;
 }
-/* line 206, ../scss/ulearn.scss */
+/* line 201, ../scss/ulearn.scss */
 #menusup nav .bubble {
   background: #DEDED6;
 }
-/* line 209, ../scss/ulearn.scss */
+/* line 204, ../scss/ulearn.scss */
 #menusup nav .bubble .arrow {
   border-top-color: #DEDED6;
 }
-/* line 218, ../scss/ulearn.scss */
+/* line 213, ../scss/ulearn.scss */
 #menusup nav .bubble-content {
   padding: 7px 0px 8px 0px;
 }
-/* line 220, ../scss/ulearn.scss */
+/* line 215, ../scss/ulearn.scss */
 #menusup nav a {
   display: block;
   text-align: center;
@@ -2432,29 +2428,29 @@ input[type="text"]:focus {
   -o-transition: 0s;
   transition: 0s;
 }
-/* line 235, ../scss/ulearn.scss */
+/* line 230, ../scss/ulearn.scss */
 #menusup nav a:hover {
   color: #000;
 }
-/* line 243, ../scss/ulearn.scss */
+/* line 238, ../scss/ulearn.scss */
 #menusup nav .active .arrow {
   border-top-color: #f58d3d;
   display: block;
 }
-/* line 248, ../scss/ulearn.scss */
+/* line 243, ../scss/ulearn.scss */
 #menusup nav .active, #menusup nav .active a, #menusup nav .active a:hover {
   background: #f58d3d !important;
   color: white;
   text-shadow: none;
 }
 
-/* line 258, ../scss/ulearn.scss */
+/* line 253, ../scss/ulearn.scss */
 #menusup .nav-tabs {
   border-bottom: 0;
   margin-bottom: 0;
 }
 
-/* line 262, ../scss/ulearn.scss */
+/* line 257, ../scss/ulearn.scss */
 #menusup .nav-tabs > li > a {
   background: #DEDED6;
   color: #444;
@@ -2467,64 +2463,67 @@ input[type="text"]:focus {
   margin: 0;
 }
 
-/* line 273, ../scss/ulearn.scss */
+/* line 268, ../scss/ulearn.scss */
 #menusup .nav-tabs > .active > a, #menusup .nav-tabs > .active > a:hover, .nav-tabs > .active > a:focus {
   background: #f58d3d;
   color: white;
   text-shadow: none;
 }
 
-/* line 278, ../scss/ulearn.scss */
+/* line 273, ../scss/ulearn.scss */
 #menusup .nav-tabs > li > a:hover, .nav-tabs > li > a:focus {
   background: #EEEEEE;
   transition: all 0.25s ease 0s;
 }
 
-/* line 282, ../scss/ulearn.scss */
+/* line 277, ../scss/ulearn.scss */
 #menusup .icons {
   font-size: 20px;
 }
 
-/* line 284, ../scss/ulearn.scss */
+/* line 279, ../scss/ulearn.scss */
 #day {
   background: none repeat scroll 0 0 #f58d3d;
-  border-radius: 4px 4px 4px 4px;
   color: white;
   font-size: 36px;
   font-weight: bold;
-  padding-bottom: 18px;
-  padding-top: 24px;
+  padding-bottom: 7px;
+  padding-top: 13px;
   text-align: center;
   text-shadow: 1px 1px 0 #92480F;
   margin-bottom: 0;
 }
+/* line 291, ../scss/ulearn.scss */
+#day .arrow {
+  border-left-color: #f58d3d;
+}
 
-/* line 296, ../scss/ulearn.scss */
+/* line 293, ../scss/ulearn.scss */
 #day p {
   margin: 0;
 }
 
-/* line 297, ../scss/ulearn.scss */
+/* line 294, ../scss/ulearn.scss */
 .data {
   font-size: 13px;
   padding-top: 6px;
 }
 
-/* line 298, ../scss/ulearn.scss */
+/* line 297, ../scss/ulearn.scss */
 #agenda {
   background: #f5f5f5;
   font-size: 12px;
   margin-top: 10px;
 }
 
-/* line 303, ../scss/ulearn.scss */
+/* line 302, ../scss/ulearn.scss */
 #esdev {
   line-height: 15px;
   padding: 8px 4px 0 2px;
   margin-bottom: 0;
 }
 
-/* line 308, ../scss/ulearn.scss */
+/* line 307, ../scss/ulearn.scss */
 #calendari {
   background: none repeat scroll 0 0 #F5F5F5;
   margin-top: 10px;
@@ -2532,7 +2531,7 @@ input[type="text"]:focus {
   text-shadow: 1px 1px 0 white;
 }
 
-/* line 314, ../scss/ulearn.scss */
+/* line 313, ../scss/ulearn.scss */
 #box_agenda .hiddenStructure {
   background: none repeat scroll 0 0 #EAE9E4;
   color: black;
@@ -2540,29 +2539,29 @@ input[type="text"]:focus {
   padding: 1px;
 }
 
-/* line 320, ../scss/ulearn.scss */
+/* line 319, ../scss/ulearn.scss */
 .weekdays {
   font-size: 11px;
 }
 
-/* line 321, ../scss/ulearn.scss */
+/* line 320, ../scss/ulearn.scss */
 .ploneCalendar {
   width: 100%;
   font-size: 13px;
 }
 
-/* line 322, ../scss/ulearn.scss */
+/* line 321, ../scss/ulearn.scss */
 .event {
   text-shadow: none;
   text-align: center;
 }
 
-/* line 323, ../scss/ulearn.scss */
+/* line 322, ../scss/ulearn.scss */
 .event:hover {
   background: #fff;
 }
 
-/* line 324, ../scss/ulearn.scss */
+/* line 323, ../scss/ulearn.scss */
 .todayevent {
   background: #007BC0;
   text-shadow: none;
@@ -2570,29 +2569,29 @@ input[type="text"]:focus {
   border-radius: 2px;
 }
 
-/* line 325, ../scss/ulearn.scss */
+/* line 324, ../scss/ulearn.scss */
 .event a {
   color: #555;
   font-weight: normal;
 }
 
-/* line 326, ../scss/ulearn.scss */
+/* line 325, ../scss/ulearn.scss */
 .todayevent a {
   color: #fff;
 }
 
-/* line 328, ../scss/ulearn.scss */
+/* line 327, ../scss/ulearn.scss */
 #box_valorats ul, #box_comentaris ul {
   margin-top: 10px;
   margin-left: 25px;
 }
 
-/* line 330, ../scss/ulearn.scss */
+/* line 329, ../scss/ulearn.scss */
 #box_valorats li a:hover, #box_comentaris li a:hover {
   text-decoration: underline;
 }
 
-/* line 332, ../scss/ulearn.scss */
+/* line 331, ../scss/ulearn.scss */
 #box_valorats li, #box_comentaris li {
   border-bottom: 1px solid #EEEEEE;
   font-size: 13px;
@@ -2601,14 +2600,14 @@ input[type="text"]:focus {
   padding-bottom: 8px;
 }
 
-/* line 339, ../scss/ulearn.scss */
+/* line 338, ../scss/ulearn.scss */
 #box_valorats i, #box_comentaris i {
   color: #34495E;
   font-size: 15px;
   vertical-align: middle;
 }
 
-/* line 346, ../scss/ulearn.scss */
+/* line 344, ../scss/ulearn.scss */
 .btn-comunitat {
   color: #FFFFFF;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
@@ -2631,7 +2630,7 @@ input[type="text"]:focus {
   width: 100%;
 }
 
-/* line 371, ../scss/ulearn.scss */
+/* line 369, ../scss/ulearn.scss */
 .btn-comunitat:hover,
 .btn-comunitat:active,
 .btn-comunitat.active,
@@ -2642,7 +2641,7 @@ input[type="text"]:focus {
   *background-color: #003bb3;
 }
 
-/* line 376, ../scss/ulearn.scss */
+/* line 374, ../scss/ulearn.scss */
 #menusup .nav-tabs > .btn-plus > a {
   background: none repeat scroll 0 0 #34495E;
   color: white;
@@ -2651,13 +2650,13 @@ input[type="text"]:focus {
   text-shadow: none;
 }
 
-/* line 383, ../scss/ulearn.scss */
+/* line 381, ../scss/ulearn.scss */
 #menusup .nav-tabs > .btn-plus > a:hover {
   background: none repeat scroll 0 0 #34495E;
   opacity: 0.8;
 }
 
-/* line 388, ../scss/ulearn.scss */
+/* line 386, ../scss/ulearn.scss */
 #communitylist {
   padding: 10px;
   font-size: 13px;
@@ -2665,7 +2664,7 @@ input[type="text"]:focus {
   text-shadow: 1px 1px 0px white;
   background: #f9f9f9;
 }
-/* line 395, ../scss/ulearn.scss */
+/* line 393, ../scss/ulearn.scss */
 #communitylist .eines {
   color: #34495E;
   float: right;
@@ -2673,12 +2672,12 @@ input[type="text"]:focus {
   margin: 0 10px 50px;
   text-decoration: none;
 }
-/* line 403, ../scss/ulearn.scss */
+/* line 401, ../scss/ulearn.scss */
 #communitylist ul {
   margin-left: 0;
   list-style: none;
 }
-/* line 408, ../scss/ulearn.scss */
+/* line 406, ../scss/ulearn.scss */
 #communitylist li {
   min-height: 55px;
   line-height: 20px;
@@ -2690,73 +2689,73 @@ input[type="text"]:focus {
   background: #f9f9f9;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1) inset, 0 0 0 #dddddd;
 }
-/* line 420, ../scss/ulearn.scss */
+/* line 418, ../scss/ulearn.scss */
 #communitylist a {
   color: #555;
   text-decoration: none;
 }
-/* line 424, ../scss/ulearn.scss */
+/* line 422, ../scss/ulearn.scss */
 #communitylist a h4 {
   color: #F58D3D;
   font-size: 16px;
   margin-bottom: 0;
   margin-top: 0;
 }
-/* line 430, ../scss/ulearn.scss */
+/* line 428, ../scss/ulearn.scss */
 #communitylist a h4:hover {
   opacity: 0.8;
 }
-/* line 434, ../scss/ulearn.scss */
+/* line 432, ../scss/ulearn.scss */
 #communitylist img {
   margin-right: 15px;
   margin-top: 3px;
   border: 2px solid white;
   max-width: 54px;
 }
-/* line 440, ../scss/ulearn.scss */
+/* line 438, ../scss/ulearn.scss */
 #communitylist img:hover {
   transition: all 0.25s ease 0s;
   border: 2px solid #F58D3D;
 }
-/* line 443, ../scss/ulearn.scss */
+/* line 441, ../scss/ulearn.scss */
 #communitylist .item {
   margin-right: 50px;
 }
 
-/* line 448, ../scss/ulearn.scss */
+/* line 446, ../scss/ulearn.scss */
 .icon-ulearn-community, .icon-ulearn.community {
   background-position: -312px -192px;
 }
 
-/* line 450, ../scss/ulearn.scss */
+/* line 448, ../scss/ulearn.scss */
 #listing-table a.contenttype-ulearn-community:before,
 .template-folder_tabular_view .listing a.contenttype-ulearn-community:before {
   background-position: -312px -192px;
 }
 
-/* line 454, ../scss/ulearn.scss */
+/* line 452, ../scss/ulearn.scss */
 #box_perfil .span9 {
   overflow-y: hidden;
   height: 150px;
 }
 
-/* line 455, ../scss/ulearn.scss */
+/* line 453, ../scss/ulearn.scss */
 #box_community img {
   width: 200px;
 }
 
-/* line 457, ../scss/ulearn.scss */
+/* line 455, ../scss/ulearn.scss */
 #searchcommunities {
   margin-right: auto;
   margin-left: auto;
   width: 300px;
 }
 
-/* line 460, ../scss/ulearn.scss */
+/* line 458, ../scss/ulearn.scss */
 #box_comunitats .bubble-content {
   padding: 6px 0px;
 }
-/* line 462, ../scss/ulearn.scss */
+/* line 460, ../scss/ulearn.scss */
 #box_comunitats .bubble a {
   background: none repeat scroll 0 0 #f58d3d;
   padding: 6px 14px;
@@ -2767,44 +2766,44 @@ input[type="text"]:focus {
   text-shadow: 1px 1px 0 #92480F;
   width: 33px;
 }
-/* line 472, ../scss/ulearn.scss */
+/* line 470, ../scss/ulearn.scss */
 #box_comunitats .bubble .arrow {
   border-right-color: #f58d3d;
 }
-/* line 475, ../scss/ulearn.scss */
+/* line 473, ../scss/ulearn.scss */
 #box_comunitats li a {
   -webkit-border-radius: 0px;
   -moz-border-radius: 0px;
   border-radius: 0px;
 }
 
-/* line 479, ../scss/ulearn.scss */
+/* line 477, ../scss/ulearn.scss */
 #box_stats .bubble-content {
   padding: 5px 12px;
   text-align: center;
 }
-/* line 480, ../scss/ulearn.scss */
+/* line 478, ../scss/ulearn.scss */
 #box_stats .bubble {
   background-color: #344961;
   color: white;
   width: 60px;
 }
-/* line 484, ../scss/ulearn.scss */
+/* line 482, ../scss/ulearn.scss */
 #box_stats .bubble .arrow {
   border-left-color: #344961;
 }
-/* line 486, ../scss/ulearn.scss */
+/* line 484, ../scss/ulearn.scss */
 #box_stats p {
   margin: 0;
   padding: 5px 0 5px 78px;
   background-color: #bbb;
   font-weight: bold;
 }
-/* line 492, ../scss/ulearn.scss */
+/* line 490, ../scss/ulearn.scss */
 #box_stats ul {
   margin-top: 5px;
 }
-/* line 493, ../scss/ulearn.scss */
+/* line 491, ../scss/ulearn.scss */
 #box_stats li {
   margin-bottom: 5px;
 }
